# nebree8

./: .gitignore  .gitmodules  .style.yapf  arduino.py  async_queue.py  bower.json  controller.py  controller_test.py  deprime.py  fake_robot.py  ice.py  io_bank.py  led_show.py  load_cell_dev.py  motor.py  move_loop.py  nebree8.py  nebree8_dev.py  open_valve.py  physical_robot.py  poll_appengine.py  pressure_debug.py  robot.py  server.py  server_loop.sh  servo.py  setup.sh  slammer.py  test_cup_dispenser.py
actions/: action.py  compressor.py  dispense_cup.py  home.py  ice.py  led.py  meter.py  meter_bitters.py  meter_common.py  meter_dead_reckoned.py  meter_hx711.py  meter_load_cell.py  meter_simple.py  move.py  move_with_ice.py  pressurize.py  slam_stir.py  vent.py  wait_for_glass_placed.py  wait_for_glass_removal.py
arduino/: CMakeLists.txt  io_delay.h  led_module.h  motor_module.h  pressure_sensor_module.h  servo_module.h  uc_io_bank.cc
config/: __init__.py  ingredients.py
drinks/: actions_for_recipe.py  drink_db.py  drink_rack.py  manual_db.py  random_drinks.py  recipe.py  water_down.py
monitor/: monitor.sh
nano/: CMakeLists.txt  blink_module.h  nano_controller.cc  raw_load_cell.cc
parts/: io_bank.py  load_cell.py  motor.py
static/: dev.html  display.html  load_cell.html  selector.html
static/css/: display.css  load-cell.css
static/elements/: drink-selector.html  drinks-list.html  load-cell.html
static/js/: display.js  load-cell.js
tools/: clean.py  common.py  deprime.py  prime_bitters.py  test_adc.py  test_cup_dispenser.py
uno-cup-dispenser/: .CMakeLists.txt.swo  .blink_module.h.swo  CMakeLists.txt  motor_module.h
